<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <artifactId>dataio-sink-fbs</artifactId>
    <groupId>dk.dbc</groupId>
    <version>1.0-SNAPSHOT</version>
  </parent>

  <artifactId>dataio-sink-fbs-ejb</artifactId>
  <name>dataio-sink-fbs-ejb</name>
  <packaging>ejb</packaging>

  <properties>
    <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
  </properties>

  <dependencies>
    <dependency>
      <groupId>javax</groupId>
      <artifactId>javaee-api</artifactId>
      <version>${javaee.api.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>dk.dbc</groupId>
      <artifactId>dataio-sink-fbs-types-updateMarcXchange</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>dk.dbc</groupId>
      <artifactId>dataio-commons-utils-service</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>dk.dbc</groupId>
      <artifactId>dataio-commons-utils-test</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
    <!--dependency>
      <groupId>dk.dbc</groupId>
      <artifactId>dataio-commons-utils-json</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>dk.dbc</groupId>
      <artifactId>dataio-commons-utils-test</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>dk.dbc</groupId>
      <artifactId>dataio-commons-types</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>dk.dbc</groupId>
      <artifactId>dataio-commons-types</artifactId>
      <version>${project.parent.version}</version>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>${slf4j.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>javax</groupId>
      <artifactId>javaee-api</artifactId>
      <version>${javaee.api.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.8</version>
    </dependency>
    <dependency>
      <groupId>dk.dbc</groupId>
      <artifactId>dataio-sink-testutil</artifactId>
      <version>${project.parent.version}</version>
      <scope>test</scope>
    </dependency-->
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
          <compilerArgs>
            <arg>-Djava.endorsed.dirs=${endorsed.dir}</arg>
          </compilerArgs>
        </configuration>
      </plugin>

      <plugin>
        <!-- Move to dev-profile -->
        <groupId>org.codehaus.cargo</groupId>
        <artifactId>cargo-maven2-plugin</artifactId>
        <version>${cargo.version}</version>
        <dependencies>
          <dependency>
            <groupId>org.glassfish.main.deployment</groupId>
            <artifactId>deployment-client</artifactId>
            <version>${glassfish.version}</version>
          </dependency>
        </dependencies>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-ejb-plugin</artifactId>
        <version>2.3</version>
        <configuration>
          <ejbVersion>3.1</ejbVersion>
          <filterDeploymentDescriptor>true</filterDeploymentDescriptor>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>2.6</version>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <outputDirectory>${endorsed.dir}</outputDirectory>
              <silent>true</silent>
              <artifactItems>
                <artifactItem>
                  <groupId>javax</groupId>
                  <artifactId>javaee-endorsed-api</artifactId>
                  <version>7.0</version>
                  <type>jar</type>
                </artifactItem>
              </artifactItems>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
